fix mobile styles

--- a/index.html
+++ b/index.html
@@ -2,69 +2,60 @@
 <html lang="en" class="h-100">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <title>AlpineJS demo for Smashing Magazine</title>
+  <title>AlpineJS demo for Smashing Magazine</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v1.9.4/dist/alpine.js" defer></script>
+  <!-- Bootstrap core CSS -->
+  <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v1.9.4/dist/alpine.js" defer></script>
 
 
-    <!-- Custom styles for this template -->
+  <!-- Custom styles for this template -->
 </head>
 
 <body x-data="{...app()}">
-    <section
-        class="p-3"
-        >   
-            <p>
-                Settings:
-                Default language <input type="checkbox" x-model="defaultRu"/> <span x-text="defaultRu ? 'ru': 'en'" ></span> 
-                Random: <input type="checkbox" x-model="isShuffled"/>
-            </p>
-    </section>
-    <main
-        class="pl-2">
-        <hr class="m-2">
-        <template 
-            class="m-2 pl-2"
-            x-for="letter in letters" :key="letter">
-            <a  class="p-3" 
-                x-bind:class="{'border-solid border-2 border-blue-400' : letter == currentLetter}"
-                href="javascript:void(0);" x-on:click="chooseLetter(letter)" x-text="letter"></a>
-        </template>
-        <hr class="m-2">
-        <h3 
-            class="w-full text-center"
-            x-show="currentLetter == ''">
-                Choose letter</h3>
+  <section class="p-3">
+    <p>
+      Settings:
+      Default language <input type="checkbox" x-model="defaultRu" /> <span x-text="defaultRu ? 'ru': 'en'"></span>
+      Random: <input type="checkbox" x-model="isShuffled" />
+    </p>
+  </section>
+  <main class="pl-2">
+    <hr class="m-2">
+    <div class="flex flex-row flex-wrap">
+      <template class="m-2 pl-2" x-for="letter in letters" :key="letter">
+        <a class="p-3" x-bind:class="{'border-solid border-2 border-blue-400' : letter == currentLetter}"
+          href="javascript:void(0);" x-on:click="chooseLetter(letter)" x-text="letter"></a>
+      </template>
+    </div>
+    <hr class="m-2">
+    <h3 class="w-full text-center" x-show="currentLetter == ''">
+      Choose letter</h3>
 
-        <div  x-show="currentLetter != ''">
-            <h3 class="w-full text-center"> 
-                Letter <b>"<span class="" x-text="currentLetter"></span>"</b> </h3>
-            <h4 
-                class="w-full text-center"
-                x-on:click="nextCard()">Cards <span x-text="cardIdx + 1"></span> of <span x-text="getLength()"></span>  
-                Next</h4>
-            <div x-on:click="toogleCard()" class="m-2 p-4 border-solid border-4">
-                <h4 x-show="!toogle" x-text="getCard(true)"></h4>
-                <h4 x-show="toogle" x-text="getCard(false)"></h4>
-            </div>
-            <div
-                class="w-full flex justify-center"
-                >
-                <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" 
-                    x-on:click="nextCard()"> Next</button>
-            </div>
-        </div>
-    </main>
+    <div x-show="currentLetter != ''">
+      <h3 class="w-full text-center">
+        Letter <b>"<span class="" x-text="currentLetter"></span>"</b> </h3>
+      <h4 class="w-full text-center" x-on:click="nextCard()">Cards <span x-text="cardIdx + 1"></span> of <span
+          x-text="getLength()"></span>
+        Next</h4>
+      <div x-on:click="toogleCard()" class="m-2 mb-8 p-6 border-solid border-4 flex justify-center items-center">
+        <h4 x-show="!toogle" x-text="getCard(true)"></h4>
+        <h4 x-show="toogle" x-text="getCard(false)"></h4>
+      </div>
+      <div class="w-full flex justify-center ">
+        <button class="w-full lg:w-1/4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" x-on:click="nextCard()">
+          Next</button>
+      </div>
+    </div>
+  </main>
 
-<script src="data.js"></script>
-<script src="app.js"></script>
+  <script src="data.js"></script>
+  <script src="app.js"></script>
 </body>
 
 </html>
